--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -1,7 +1,7 @@
 div.nextbutton {
   z-index: 10;
   width: 33%;
-  height: 0;
+  height: 10%;
   position: absolute;
   top: 10px;
   left: 10px;
@@ -10,4 +10,5 @@ div.nextbutton {
   color: #FFFFFF;
   vertical-align: middle;
   user-select: none;
+  display: none;
 }
