--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -10,6 +10,7 @@ div.nextbutton {
     color: #FFFFFF;
     vertical-align: middle;
     user-select: none;
+  display: none;
 }
 
 a:link, a:visited, a:hover, a:active {
