--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -10,7 +10,7 @@ a {
     margin-bottom: 2rem;
     border-radius: 1rem;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: 50%;
     /*border: 1px solid black;*/
     background: -webkit-linear-gradient(white, white, white, white, #CCFFFF); /* Safari 5.1 - 6.0 */
