--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -1,29 +1,29 @@
 a {
     z-index: 10;
-    width: 33%;
+    width: 30%;
     height: 4.5rem;
-    text-align: center;
-    vertical-align: middle;
     user-select: none;
-    display: none;
-    margin-left: -2.5rem;
-    margin-bottom: 2rem;
+    /*display: none;*/
+    /*margin-left: -30%;*/
+    /*margin-bottom: 2rem;*/
     border-radius: 1rem;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    /*border: 1px solid black;*/
+    left:0;
+    right:0;
+    margin: 2rem auto;
+    border: 1px solid black;
     background: -webkit-linear-gradient(white, white, white, white, #CCFFFF); /* Safari 5.1 - 6.0 */
     background: -o-linear-gradient(white, white, white, white, #CCFFFF); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(white, white, white, white, #CCFFFF); /* Firefox 3.6 - 15 */
     background: linear-gradient(white, white, white, white, #CCFFFF); /* 标准的语法 */
 }
 
-div.nextbutton{
+div.nextbutton {
+    width: 100%;
     text-align: center;
-    height: 5rem;
     font-size: 1.5rem;
-    line-height: 5rem;
+    line-height: 4.5rem;
 }
 
 a:link, a:visited, a:hover, a:active {
