--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -10,7 +10,7 @@ a {
     left:0;
     right:0;
     margin: 2rem auto;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     background: -webkit-linear-gradient(white, white, white, white, #CCFFFF); /* Safari 5.1 - 6.0 */
     background: -o-linear-gradient(white, white, white, white, #CCFFFF); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(white, white, white, white, #CCFFFF); /* Firefox 3.6 - 15 */
@@ -39,8 +39,4 @@ a:link, a:visited, a:hover, a:active {
     text-align: center;
     vertical-align: middle;
     z-index: 10;
-}
-
-body{
-    background-color: black;
 }
