--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -1,4 +1,4 @@
-a {
+#nextbutton {
     z-index: 10;
     width: 30%;
     height: 4.5rem;
@@ -33,10 +33,13 @@ a:link, a:visited, a:hover, a:active {
 #musicPlay{
     z-index: 10;
     opacity: 0.5;
-    border: 2px solid rgba(255,255,255,1);
+    border: 2px solid white;
     border-radius: 2rem;
     height: 1.5rem;
     width: 1.5rem;
     text-align: center;
     vertical-align: middle;
+    position: absolute;
+    user-select: none;
+    margin: 0.5rem;
 }
