--- a/AFrame/animation-mixer/index.css
+++ b/AFrame/animation-mixer/index.css
@@ -42,4 +42,5 @@ a:link, a:visited, a:hover, a:active {
     position: absolute;
     user-select: none;
     margin: 0.5rem;
+    padding: 0.1rem;
 }
